# Rocstar-legacy

./: .gitignore  .gitmodules  01_8burn__interface__data_8f90.html  01_8burn__interface__data_8f90_source.html  02_8burn__APN__global__data_8f90.html  02_8burn__APN__global__data_8f90_source.html  02_8burn__ZN__global__data_8f90.html  02_8burn__ZN__global__data_8f90_source.html  ALEUpdateMassMatrix_8f90.html  ALEUpdateMassMatrix_8f90.js  ALEUpdateMassMatrix_8f90_a2331bc20083ef3382a8bd41e0fd4ab8f_cgraph.map  ALEUpdateMassMatrix_8f90_a2331bc20083ef3382a8bd41e0fd4ab8f_cgraph.md5  ALEUpdateMassMatrix_8f90_source.html  APN__input__0d_8f90.html  APN__input__0d_8f90.js  APN__input__0d_8f90_a3f6beb58a43d258a9657af0c1a98b7b1_cgraph.map  APN__input__0d_8f90_a3f6beb58a43d258a9657af0c1a98b7b1_cgraph.md5  APN__input__0d_8f90_a3f6beb58a43d258a9657af0c1a98b7b1_icgraph.map  APN__input__0d_8f90_a3f6beb58a43d258a9657af0c1a98b7b1_icgraph.md5  APN__input__0d_8f90_source.html  A__D__tensors_8f90.html  A__D__tensors_8f90.js  A__D__tensors_8f90_a89fc62980ed56d0fb35dc915004a2069_cgraph.map  A__D__tensors_8f90_a89fc62980ed56d0fb35dc915004a2069_cgraph.md5  A__D__tensors_8f90_a89fc62980ed56d0fb35dc915004a2069_icgraph.map  A__D__tensors_8f90_a89fc62980ed56d0fb35dc915004a2069_icgraph.md5  A__D__tensors_8f90_ad17fa7fb64d5105aaa16f4cdbba679b6_cgraph.map  A__D__tensors_8f90_ad17fa7fb64d5105aaa16f4cdbba679b6_icgraph.map  A__D__tensors_8f90_ad17fa7fb64d5105aaa16f4cdbba679b6_icgraph.md5  A__D__tensors_8f90_source.html  Action_8C.html  Action_8C__incl.map  Action_8C__incl.md5  Action_8C_source.html  Action_8h.html  Action_8h__dep__incl.map  Action_8h__dep__incl.md5  Action_8h__incl.map  Action_8h__incl.md5  Action_8h_source.html  (+50392 more)
Rocburn/: CMakeLists.txt  README  Rocburn_load_module.f90  rocburn_2D.f90
Rocburn/Rocburn_APN/: APN_input_0d.f90
Roccom/: CMakeLists.txt
Roccom/Rocblas/: CMakeLists.txt
Roccom/Rocblas/src/: Rocblas.C  dots.C  op2args.C
Roccom/Rocin/: CMakeLists.txt
Roccom/Rocin/include/: Directory.H  HDF4.h  rocin_block.h
Roccom/Rocin/src/: HDF4.C  Rocin.C
Roccom/Rocin/test/: intest1.C  param_test.C  readsdv.f90
Roccom/Rocin/util/: cgns2smf.C  hdf2plt.C  hdf2pltV2.C  hdf2vtk.C  printfeas.C
Roccom/Rocmap/: CMakeLists.txt
Roccom/Rocmap/doc/: design.lyx
Roccom/Rocmap/include/: Pane_boundary.h  Pane_communicator.h  Pane_connectivity.h  Rocmap.h  mapbasic.h
Roccom/Rocmap/src/: Pane_boundary.C  Pane_communicator.C  Pane_connectivity.C  Pconn_util.C  Rocmap.C
Roccom/Rocmap/test/: pcommpartest.C
Roccom/Rocmap/util/: addpconn.C
Roccom/Rocout/: CMakeLists.txt
Roccom/Rocout/include/: Rocout.h  Rocout_hdf4.h
Roccom/Rocout/src/: Rocout.C  Rocout_cgns.C
Roccom/Rocout/test/: outtest.C  param_test.C
Roccom/Rocsurf/: CMakeLists.txt
Roccom/Rocsurf/include/: Generic_element_2.h  Manifold_2.h
Roccom/Rocsurf/src/: Generic_element_2.C  Manifold_2.C  Rocsurf.C  compute_bounded_volumes.C  compute_curvature.C  compute_element_normals.C
Roccom/Rocsurf/test/: IM_Reader.h  Neutral_Reader.h  OBJ_Reader.h  SMF_Reader.h  im2hdf.C  mcntest.C  msh2hdf.C  obj2hdf.C  project_test.C  serialize.C  smf2hdf.C  surfmap.C  surftest1.C
Roccom/include/: Attribute.h  Connectivity.h  Element_accessors.h  Pane.h  Roccom_base.h  commpi.h  maps.h  roccom_assertion.h  roccom_basic.h  roccom_c++.h  roccom_c.h  roccom_devel.h  roccom_exception.h  roccomf90.h
Roccom/src/: Connectivity.C  Element_accessors.C  Roccom_base.C  Window.C  assertion.C  commpi.C  roccom_exception.C  roccom_f.C
Rocfrac/: CMakeLists.txt
Rocfrac/Source/: FluidPressLoad_corrected.f90  ROCSTAR_RocFrac.f90  RocFracLoadModule.f90  RocFracMain.f90  RocFracSubInterface.f90  TractLoad_Hex_corrected.f90  feminp.f90
Rocfrac/utilities/GridConversion/: CMakeLists.txt
Rocfrac/utilities/RocfracPrep/: 2Dmesh.f90  RocfracPrep.f90  read_patran.f90
Rocstar-1.0.0/: CMakeLists.txt
Rocstar-1.0.0/Rocburn/: CMakeLists.txt  rocburn_2D.f90
Rocstar-1.0.0/Rocburn/Rocburn_APN/: 02.burn_APN_global_data.f90  APN_input_0d.f90
Rocstar-1.0.0/Rocburn/Rocburn_PY/: setup_py.f90
Rocstar-1.0.0/Roccom/: .cvsignore  CMakeLists.txt
Rocstar-1.0.0/Roccom/Rocin/: CMakeLists.txt
Rocstar-1.0.0/Roccom/Rocout/: CMakeLists.txt
Rocstar-1.0.0/Roccom/include/: Function.h  Pane_node_accessors.h  Window.h  mapptr.h  roccom.h  roccom_c++.h  roccom_c.h
Rocstar-1.0.0/Roccom/src/: Attribute.C  Pane.C  Pane_node_accessors.C  Roccom_base.C  m_pointers.f90  roccom_c.C  roccom_exception.C  roccom_f.C  utilities.f90
Rocstar-1.0.0/Rocface/CGAL/: Makefile  README  dep_helper.C
Rocstar-1.0.0/Rocface/test/: ex1.C  ex5.C  readsdv.C  reptrans.C  rocfacetest_charm
Rocstar-1.0.0/Rocface/util/: rfctest.C
Rocstar-1.0.0/RocfluidMP/: TEMPLATE.F90
Rocstar-1.0.0/RocfluidMP/Rocflo/: CMakeLists.txt
Rocstar-1.0.0/RocfluidMP/Rocflu/: CMakeLists.txt
Rocstar-1.0.0/RocfluidMP/libflo/: RFLO_ArcLengthBounds.F90  RFLO_BoundaryDeformation.F90  RFLO_CalcCellCentroids.F90  RFLO_CalcFaceCentroids.F90  RFLO_CalcGradConnBc.F90  RFLO_CalcGradDummy.F90  RFLO_CalcGradDummyConn.F90  RFLO_CalcGradDummyPhys.F90  RFLO_CalcGradDummySymm.F90  RFLO_CalcGradFaces.F90  RFLO_CalcGradPhysBc.F90  RFLO_CalcGradVector.F90  RFLO_ChangeInteriorGrid.F90  RFLO_CheckValidity.F90  RFLO_CopyBoundaryData.F90  RFLO_CopyEdgeFaceNorm.F90  RFLO_CopyEdgeFaceParal.F90  RFLO_CopyGeometryDummy.F90  RFLO_CopyTopologyLevels.F90  RFLO_DerivedInputValues.F90  RFLO_EdgeDeformation.F90  RFLO_EdgeDeformationStraight.F90  RFLO_ExchangeDnodeCopy.F90  RFLO_ExchangeDnodeRecv.F90  RFLO_ExchangeDnodeSend.F90  (+41 more)
Rocstar-1.0.0/Rocfrac/: CMakeLists.txt
Rocstar-1.0.0/Rocman/: CMakeLists.txt
Rocstar-1.0.0/Rocmop/: CMakeLists.txt
Rocstar-1.0.0/Rocon/: CMakeLists.txt
Rocstar-1.0.0/Rocprep/: RocfaceProcessor.pm  RocfluProcessor.pm
Rocstar-1.0.0/Rocprop/: CMakeLists.txt  Makefile  Makefile.in
Rocstar-1.0.0/include/: ExampleHeader.H
Rocstar-1.0.0/src/: ExampleParallelProgram.C  ExampleSerialProgram.C  pepi.C  rocstar.C  sep.C
Rocstar-1.0.0/testing/: CMakeLists.txt
testing/: CMakeLists.txt  CMakeLists.txt.new  CMakeLists.txt.sav
(+2238 files in other folders)
